(fix(swagger routers,trip controller) swagger routers fixing driver model fixing rider model fixing trip model [finish(swagger routers,driver rider trip models,trip controller)]
